feat: 新增节点颜色保存与恢复功能并优化任务结果处理
1. 在ProcessNode中新增节点颜色管理功能，支持从properties读取颜色并应用到节点
2. 扩展DataManager支持节点颜色保存到数据库，在JobComposeData.NodeData的properties中添加color字段
3. 优化CanvasDataLoader支持从NodeData创建ProcessNode的公共方法，并自动应用节点颜色
4. 重构HttpTaskExecutor和JdbcTaskExecutor，支持返回NodeResult结构并记录详细执行信息
5. 新增ResultStorageService支持NodeResult结果的存储和解析
6. 扩展ParameterResolver支持链式调用和方法执行（如#{job}.data.get(0)）
7. 优化SmartParameterInput组件，支持语法高亮和更智能的自动补全
8. 新增RecentFilesManager管理最近打开的任务组文件
9. 实现MainView中任务组切换时的滚动位置保存和恢复功能
10. 新增SettingsDialog系统设置对话框